Exercises/Lab2/MapReduce/bin/mykernel_emulation.36529.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/u132412/eece-6540-labs/Exercises/MapReduce/mykernel.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=194 -Xclang -ivfsoverlay-lib/glob/development-tools/versions/fpgasupportstack/a10/1.2.1/intelFPGA_pro/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/u132412/eece-6540-labs/Exercises/MapReduce" -I "/glob/development-tools/versions/fpgasupportstack/a10/1.2.1/intelFPGA_pro/hld/llvm/include/cclang"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.0 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/u132412/eece-6540-labs/Exercises/MapReduce/mykernel.cl:6:19: error: '__local' variable cannot have an initializer
    __local float local_sum= 0.0f;
                  ^
/home/u132412/eece-6540-labs/Exercises/MapReduce/mykernel.cl:9:28: error: expected ';' after expression
    global_result[indx] = 5
                           ^
                           ;
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
